Add Teaching page to search engine indexes.
Revise models and importer code to reflect the fact that the former 'help'
page model is now used for most miscellaneous pages that are not part of
one of the site's main features (the keys and PlantShare). (#202)

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -56,13 +56,13 @@
                                 {{ item_title|italicize_plant|safe }}
                             </a>
                         {% endif %}
-                        {% if result.model_name == 'helppage' %}
+                        {% if result.model_name == 'plainpage' %}
                             <a href="{{ url_base }}{{ result.object.url_path }}"><img
                                 src="/static/images/icons/icon-help.png"
                                 alt="" title="Help page">
                                 {{ item_title }}</a>
                         {% endif %}
-                        {% if result.model_name == 'glossaryhelppage' %}
+                        {% if result.model_name == 'glossarypage' %}
                             <a href="{{ url_base }}{{ result.object.url_path }}"><img
                                 src="/static/images/icons/icon-glossary.png"
                                 alt="" title="Glossary page">
