Intermediate leads in the dkey now show taxa #190
The dkey main page view now recursively builds lists of the taxa that
lie beneath every intermediate lead that is displayed on the page, even
though the database, to avoid redundancy, only stores the taxa for
"leaf" leads that leave each page.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -82,10 +82,10 @@
     {% else %}
       <div class="lead">
         <div class="button-block">
-          {% if lead.taxa_cache and lead.taxa_count > 1 %}
+          {% if lead.taxa_rank and lead.taxa_set|length > 1 %}
             <a class="what-lies-beneath" href=""
                data-taxa="{{ lead.taxa_list }}">
-              See list of {{ lead.taxa_count }}
+              See list of {{ lead.taxa_set|length }}
               {{ lead.taxa_rank|taxon_plural }}
               {% if lead.letter %}
                 in {{ lead.letter }}
