--- a/gobotany/simplekey/templates/simplekey/help_contrib.html
+++ b/gobotany/simplekey/templates/simplekey/help_contrib.html
@@ -1,47 +1,57 @@
 {% extends "simplekey/_help.html" %}
 
-{% block pagetitle %}Go-Botany Contributors{% endblock %}
+{% block pagetitle %}Go Botany Contributors{% endblock %}
 
 {% block body_attributes %}id="contrib" class="app contrib"{% endblock %}
 
 {% block main_content %}
-    <h2>Go Botany Contributors</h2>
+    <h2>Contributors</h2>
 
     <h3>Project Oversight and Management</h3>
 		
-    <p>Bill Brumback<br />
-    Elizabeth Farnsworth<br />
-    Arthur Haines</p>
+    <ul>
+        <li>Bill Brumback</li>
+        <li>Elizabeth Farnsworth</li>
+        <li>Arthur Haines</li>
+    </ul>
 
     <h3>Botanical Data Management</h3>
 		
-    <p>Elizabeth Farnsworth<br />
-    Marybeth Hanley<br />
-    Sid Koul<br />
-    William Moorhead<br />
-    Tristrum Seidler</p>
+    <ul>
+        <li>Elizabeth Farnsworth</li>
+        <li>Marybeth Hanley</li>
+        <li>Sid Koul</li>
+        <li>William Moorhead</li>
+        <li>Tristrum Seidler</li>
+    </ul>
 
     <h3>Image Management</h3>
 		
-    <p>Arieh Tal<br />
-    Tom Warhol<br />
-    Jill Weber</p>
+    <ul>
+        <li>Arieh Tal</li>
+        <li>Tom Warhol</li>
+        <li>Jill Weber</li>
+    </ul>
 
     <h3>Design and Development</h3>
 		
-    <p>Matt Belge<br />
-    Rocky Burt<br />
-    Emily Dunkle<br />
-    John Galada<br />
-    Sally Kleinfeldt<br />
-    Sid Koul<br />
-    Alec Mitchell<br />
-    Brandon Rhodes<br />
-    JR Rickerson</p>
+    <ul>
+        <li>Matt Belge</li>
+        <li>Rocky Burt</li>
+        <li>Emily Dunkle</li>
+        <li>John Galada</li>
+        <li>Sally Kleinfeldt</li>
+        <li>Sid Koul</li>
+        <li>Alec Mitchell</li>
+        <li>Brandon Rhodes</li>
+        <li>JR Rickerson</li>
+    </ul>
 
     <h3>Illustration</h3>
 		
-    <p>Elizabeth Farnsworth<br />
-    Gordon Morrison</p>
+    <ul>
+        <li>Elizabeth Farnsworth</li>
+        <li>Gordon Morrison</li>
+    </ul>
 
 {% endblock %}
