Removed Debbi's email from the TOU page
Swapped Debbi's email with with gobotany@, fixes #200

--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -112,10 +112,10 @@
                           without specific written authorization from New
                           England Wild Flower Society or the designated
                           copyright holder (i.e., photographers who own
-                          copyright on their own images). Contact Debbi
-                          Edelstein (<a
+                          copyright on their own images). Contact the Go Botany
+                          Team (<a
                               href="mailto:dedelstein@newenglandwild.org"
-                              >dedelstein [at] newenglandwild.org</a>) to
+                              >gobotany [at] newenglandwild.org</a>) to
                           inquire about commercial uses.</li>
                           <li>To maintain any and all copyright or other
                           proprietary notices embedded in or attached to any
