Added hotlinking clause to TOU. Fixes #201.

--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -129,6 +129,8 @@
                           materials. Such license shall include the right to
                           exploit any proprietary rights in the posting or
                           submission.</li>
+						  <li>LINKING DIRECTLY TO GO BOTANY IMAGES IS A VIOLATION
+						  OF THE TERMS OF USE.</li>
                         </ul>
                       </li>
                       <li id="liability">
