--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -114,8 +114,8 @@
                           copyright holder (i.e., photographers who own
                           copyright on their own images). Contact the Go Botany
                           Team (<a
-                              href="mailto:dedelstein@newenglandwild.org"
-                              >gobotany [at] newenglandwild.org</a>) to
+                              href="mailto:gobotany@newenglandwild.org"
+                              >gobotany@newenglandwild.org</a>) to
                           inquire about commercial uses.</li>
                           <li>To maintain any and all copyright or other
                           proprietary notices embedded in or attached to any
