Terms page: add mailto to email address on page load.
Add a script that can be used anywhere on the site to turn a lightly
obfuscated email address ([at], [dot]) in an unlinked anchor
element into a mailto link with the address reformatted. (#200)

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -187,6 +187,8 @@ header { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; }
 
 header, .content, footer { width: 100%; }
 
+a.email:not([href]) { color: #000; text-decoration: none; }
+
 .container { width: 960px; padding: 0 10px; margin: 0 auto; }
 
 header h1 a { display: block; text-indent: -9000px; }
