--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -5,8 +5,12 @@
 {% block body_attributes %}id="terms-of-use" class="app terms-of-use"{% endblock %}
 
 {% block js_require %}
-    require(['util/sidebar'], function(sidebar) {
+    require(['util/sidebar', 'util/mailto'], function (sidebar, mailto) {
         sidebar.setup();
+
+        $(document).ready(function () {
+            mailto.make_link('.email');
+        });
     });
 {% endblock %}
 
@@ -113,9 +117,8 @@
                           England Wild Flower Society or the designated
                           copyright holder (i.e., photographers who own
                           copyright on their own images). Contact the Go Botany
-                          Team (<a
-                              href="mailto:gobotany@newenglandwild.org"
-                              >gobotany@newenglandwild.org</a>) to
+                          Team (<a class="email">gobotany [at]
+                          newenglandwild [dot] org</a>) to
                           inquire about commercial uses.</li>
                           <li>To maintain any and all copyright or other
                           proprietary notices embedded in or attached to any
