Obfuscate, link, format email addresses on About, Teaching. (#204)

--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -11,8 +11,8 @@
 		
 	<p>Would you like to find out more about the project? Report
 	    a bug or erroneous data? We'd like to know! Send us an 
-		email at <a href="mailto:gobotany@newenglandwild.org">
-		gobotany@newenglandwild.org</a>.</p>
+        email at
+        <a class="email">gobotany [at] newenglandwild [dot] org</a>.</p>
 
     <h3>Go Botany Toolkit</h3>
         
