Search suggest: return additional suggestions when space allows.
When fewer than the maximum number of suggestions match at the beginning
of the string, look for additional suggestions for the remaining slots
by matching anywhere in the string. For example, if the user starts typing
the word dogwood and gets to 'dog,' there were unfilled slots at the
end of the list that are now filled with suggestions such as
alternate-leaved-dogwood, big-bracted-dogwood, etc. This is similar to
the way Google returns suggestions. (#197)

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1188,7 +1188,9 @@ nav #search #search-suggest input::-webkit-input-placeholder { color: #999; }
 
 nav #search #search-suggest input:-moz-placeholder { color: #999; }
 
-nav #search-suggest .menu li { margin: 0; padding: 3px; }
+nav #search-suggest .menu li { font-weight: bold; margin: 0; padding: 3px; }
+
+nav #search-suggest .menu span { font-weight: normal; }
 
 nav #search-suggest .menu a { height: inherit; padding: 0; }
 
