--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -554,6 +554,17 @@ body.app {
     padding: 0 0 1px 0;
 }
 
+/* Dkey content inlined into the species page */
+
+.dkey_text {
+    margin-top: 1.5em;
+    margin-bottom: 1.8em;
+    font-size: (16px / 12px) * 100%;
+    p {
+        line-height: (16px / 14px) * 100%;
+    }
+}
+
 /* Plant listing styles */
 
 .list-item {
