--- a/gobotany/static/css/dkey.css
+++ b/gobotany/static/css/dkey.css
@@ -211,7 +211,7 @@ ul.active > li > .lead, ul:target > li > .lead { background-color: #b4d57f; bord
 a.show-all-button { display: inline-block; font-size: 75%; font-weight: normal; }
 
 div.taxon-images { margin-left: 0.75em; text-align: center; }
-div.taxon-images img { margin: 0 1em 1em 0; border: 4px solid black; }
+div.taxon-images img { margin: 0 1em 1em 0; border: 4px solid black; width: 160px; height: 149px; }
 
 div.shadow { /* shadow that hides the whole page */ display: none; position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-color: rgba(0, 0, 0, 0.45); text-align: center; }
 
