--- a/gobotany/static/sass/dkey.scss
+++ b/gobotany/static/sass/dkey.scss
@@ -293,6 +293,8 @@ div.taxon-images {
     img {
         margin: 0 1em 1em 0;
         border: 4px solid black;
+        width: 160px;
+        height: 149px;
     }
 }
 
