The results page now uses lazy_images.js #188

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -574,6 +574,7 @@ a.go-to-species-page:active { background-position: 0 -62px; }
 .plant-list .plant .frame { border: 5px solid rgba(255, 255, 255, 0.8); height: 139px; position: absolute; top: 8px; width: 150px; z-index: 100; }
 
 .plant-list .plant-img-container { width: 160px; height: 149px; overflow: hidden; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); }
+.plant-list .plant-img-container img { height: 149px; /* so lazy_images knows when <img> is on screen */ }
 
 .missing-image { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eaf2e2), color-stop(100%, #d6e6c5)); background: -moz-linear-gradient(center top, #eaf2e2, #d6e6c5) repeat scroll 0 0 transparent; color: #354d1e; height: 149px; position: relative; width: 160px; }
 
