Fixed #189 with an image-type selectbox on dkey pages

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -141,6 +141,11 @@
 
 {% endif %}
 
+<p class="image-type-selector">
+  <img src="/static/images/icons/show-me.png">
+   Show photos of: <select></select>
+</p>
+
 <div class="taxon-images"></div>
 
 {% endwith %}
