--- a/gobotany/static/sass/dkey.scss
+++ b/gobotany/static/sass/dkey.scss
@@ -287,6 +287,9 @@ a.show-all-button {
     font-size: (12px / 16px) * 100%;
     font-weight: normal;
 }
+.image-type-selector {
+    display: none;  /* once images are loaded, our JS will un-hide */
+}
 div.taxon-images {
     margin-left: 1em*12px/16px;
     text-align: center;
