--- a/gobotany/static/sass/dkey.scss
+++ b/gobotany/static/sass/dkey.scss
@@ -293,11 +293,21 @@ a.show-all-button {
 div.taxon-images {
     margin-left: 1em*12px/16px;
     text-align: center;
-    img {
+    figure {
         margin: 0 1em 1em 0;
+        width: 160px;
+    }
+    img {
+        display: block;
+        margin-bottom: 0.4em;
         border: 4px solid black;
         width: 160px;
         height: 149px;
+    }
+    a {
+        font-size: 12px / 16px * 100%;
+        text-decoration: none;
+        &:hover { text-decoration: underline; }
     }
 }
 
