Ember views now require {{view.var}} in templates #216

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -93,8 +93,8 @@
                 {% handlebars %}
                 {{#view App3.TaxaView tagName="p" class="list-all hidden"}}
                 <a {{action "switch_photo_list"}}>
-                  See {{#if show_list}}photos for{{else}}a list of{{/if}}
-                  all <span class="species-count">{{taxa_count}}</span>
+                  See {{#if view.show_list}}photos for{{else}}a list of{{/if}}
+                  all <span class="species-count">{{view.taxa_count}}</span>
                   matching species.
                 </a>
                 {{/view}}
