--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -1,4 +1,3 @@
-{# New base page template: will eventually replace _base.html. #}
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,8 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,
         initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        {# For IE, activate Google Chrome Frame for version 9 or lower #}
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE9">
+
+        {# No meta tag for Google Chrome Frame: use middleware HTTP header #}
+
         <link rel="shortcut icon" href="/static/images/branding/favicon.png">
     
         {# This block is for any additional meta or link elements. #}
